# dawgdic

./: COPYING  HowToBuild.md  HowToComplete.md  HowToLookup.md  Interface.md  Makefile.in  ProjectHome.md  README  README.md  Readme.md  configure  configure.ac
branches/dawgdic-0.1.0/: Makefile.in
branches/dawgdic-0.1.0/src/nanika/dawgdic/: base-types.h  dawg-builder.h  explorer.h
branches/dawgdic-0.2.0/: Makefile.am  Makefile.in  configure
branches/dawgdic-0.2.0/src/: dawgdic.cc  make-dawgdic.cc
branches/dawgdic-0.2.0/src/nanika/dawgdic/: base-types.h  dawg-builder.h  dictionary.h  object-pool.h
branches/dawgdic-0.2.1/: Makefile.am  Makefile.in  configure.ac
branches/dawgdic-0.2.1/src/nanika/dawgdic/: dawg-builder.h  dictionary-builder.h  dictionary-explorer.h  dictionary-unit.h  dictionary.h
branches/dawgdic-0.2.1/src/nanika/ios/: line-reader.h
branches/dawgdic-0.3.0/: configure  configure.ac
branches/dawgdic-0.3.0/src/: Makefile.am  dawgdic-build.cc  dawgdic-find.cc
branches/dawgdic-0.3.0/src/dawgdic/: base-unit.h  bit-pool.h  dawg-builder.h  dawg.h
branches/dawgdic-0.3.0/test/: Makefile.am  answer
branches/dawgdic-0.3.1/src/: dawgdic-build.cc
branches/dawgdic-0.3.1/src/dawgdic/: object-pool.h
branches/dawgdic-0.3.1/test/: test.sh
branches/dawgdic-0.4.0/: README  configure
branches/dawgdic-0.4.0/src/: dawgdic-build.cc
branches/dawgdic-0.4.0/src/dawgdic/: completer.h  dictionary-builder.h
branches/dawgdic-0.4.0/test/: Makefile.in  dic-answer
branches/dawgdic-0.4.1/: configure.ac
branches/dawgdic-0.4.1/src/: Makefile.am
branches/dawgdic-0.4.1/src/dawgdic/: dawg.h  dictionary-builder.h  dictionary.h  guide-builder.h  link-table.h
branches/dawgdic-0.4.1/test/: guide-test.sh
branches/dawgdic-0.4.2/src/: Makefile.am  Makefile.in
branches/dawgdic-0.4.2/src/dawgdic/: bit-pool.h  dawg-builder.h  dawg-unit.h  dictionary-unit.h  object-pool.h  ranked-completer-candidate.h  ranked-guide-link.h  ranked-guide-unit.h
branches/dawgdic-0.4.2/test/: Makefile.in
branches/dawgdic-0.4.3/: Makefile.in  configure.ac
branches/dawgdic-0.4.3/src/: Makefile.am
branches/dawgdic-0.4.3/test/: Makefile.am  Makefile.in  guide-test.sh  ranked-test.sh
branches/dawgdic-0.4.4/: configure  configure.ac
branches/dawgdic-0.4.4/test/: Makefile.am  Makefile.in  ranked-completer-test.cc  ranked-completer-test.sh
branches/dawgdic-0.4.5/: configure.ac
branches/dawgdic-0.4.5/src/: Makefile.in
branches/dawgdic-0.4.5/test/: Makefile.in
src/: Makefile.am  Makefile.in  dawgdic-build.cc  dawgdic-find.cc  dawgdic.cc  make-dawgdic.cc
src/dawgdic/: completer.h  dawg-builder.h  dawg.h  dictionary-builder.h  dictionary.h  guide-builder.h  guide-unit.h  guide.h  ranked-completer-candidate.h  ranked-completer-node.h  ranked-completer.h  ranked-guide-builder.h  ranked-guide-link.h
src/nanika/dawgdic/: dawg-unit.h  dawg.h  dictionary-extra-unit.h  dictionary.h  object-pool.h
test/: Makefile.am  Makefile.in  completer-answer  completer-test.sh  dawg-builder-test  dawg-builder-test.cc  dawg-builder-test.sh  dic-answer  dic-test.sh  guide-answer  guide-test.sh  lexicon  ranked-test.sh
trunk/: Makefile.am  configure  configure.ac
trunk/src/: Makefile.in  dawgdic-find.cc
trunk/src/dawgdic/: bit-pool.h  completer.h  dawg-builder.h  dictionary-builder.h  dictionary-extra-unit.h  dictionary.h  guide.h  ranked-guide-builder.h  ranked-guide.h
trunk/src/nanika/dawgdic/: dictionary-builder.h  dictionary-explorer.h  dictionary-unit.h
trunk/test/: Makefile.am  Makefile.in  dawg-builder-test.sh  dic-test.sh  dictionary-test.sh  guide-test.sh  lexicon  ranked-completer-answer  ranked-completer-test.cc  ranked-test.sh
wiki/: HowToBuild.wiki  HowToComplete.wiki  HowToLookup.wiki  Interface.wiki  Readme.wiki
wiki/ja/: HowToBuild.wiki  HowToComplete.wiki  HowToLookup.wiki  Interface.wiki  Readme.wiki
