bin_PROGRAMS = dawgdic-build dawgdic-find

dawgdic_build_SOURCES = dawgdic-build.cc

dawgdic_find_SOURCES = dawgdic-find.cc

dawgdic_includedir = $(includedir)/dawgdic

dawgdic_include_HEADERS = \
	dawgdic/base-types.h \
	dawgdic/dawg.h \
	dawgdic/dawg-builder.h \
	dawgdic/dawg-unit.h \
	dawgdic/dictionary.h \
	dawgdic/dictionary-builder.h \
	dawgdic/dictionary-extra-unit.h \
	dawgdic/dictionary-unit.h \
	dawgdic/object-pool.h
