bin_PROGRAMS = make-dawgdic dawgdic

make_dawgdic_SOURCES = src/make-dawgdic.cc src/nanika/dawgdic/base-types.h src/nanika/dawgdic/dawg.h src/nanika/dawgdic/dawg-builder.h src/nanika/dawgdic/dictionary.h src/nanika/dawgdic/dictionary-builder.h src/nanika/dawgdic/dictionary-extra-unit.h src/nanika/dawgdic/dictionary-unit.h src/nanika/dawgdic/explorer.h src/nanika/dawgdic/object-pool.h src/nanika/ios/line-reader.h

dawgdic_SOURCES = src/dawgdic.cc src/nanika/dawgdic/base-types.h src/nanika/dawgdic/dawg.h src/nanika/dawgdic/dawg-builder.h src/nanika/dawgdic/dictionary.h src/nanika/dawgdic/dictionary-builder.h src/nanika/dawgdic/dictionary-extra-unit.h src/nanika/dawgdic/dictionary-unit.h src/nanika/dawgdic/explorer.h src/nanika/dawgdic/object-pool.h src/nanika/ios/line-reader.h


dawgdic_includedir = $(includedir)/nanika/dawgdic

dawgdic_include_HEADERS = src/nanika/dawgdic/base-types.h src/nanika/dawgdic/dawg.h src/nanika/dawgdic/dawg-builder.h src/nanika/dawgdic/dictionary.h src/nanika/dawgdic/dictionary-builder.h src/nanika/dawgdic/dictionary-extra-unit.h src/nanika/dawgdic/dictionary-unit.h src/nanika/dawgdic/explorer.h src/nanika/dawgdic/object-pool.h


ios_includedir = $(includedir)/nanika/ios

ios_include_HEADERS = src/nanika/ios/line-reader.h
