bin_PROGRAMS = make-dawgdic dawgdic

make_dawgdic_SOURCES = src/make-dawgdic.cc
dawgdic_SOURCES = src/dawgdic.cc

dawgdic_includedir = $(includedir)/dawgdic

dawgdic_include_HEADERS = \
	src/dawgdic/base-types.h \
	src/dawgdic/dawg.h \
	src/dawgdic/dawg-builder.h \
	src/dawgdic/dawg-unit.h \
	src/dawgdic/dictionary.h \
	src/dawgdic/dictionary-builder.h \
	src/dawgdic/dictionary-extra-unit.h \
	src/dawgdic/dictionary-unit.h \
	src/dawgdic/object-pool.h

