AM_CXXFLAGS = -Wall -I$(top_srcdir)/src/

bin_PROGRAMS = dawgdic-build dawgdic-find

dawgdic_build_SOURCES = dawgdic-build.cc

dawgdic_find_SOURCES = dawgdic-find.cc

dawgdic_includedir = $(includedir)/dawgdic

dawgdic_include_HEADERS = \
  dawgdic/base-types.h \
  dawgdic/base-unit.h \
  dawgdic/bit-pool.h \
  dawgdic/object-pool.h \
  dawgdic/link-table.h \
  dawgdic/dawg.h \
  dawgdic/dawg-builder.h \
  dawgdic/dawg-unit.h \
  dawgdic/dictionary.h \
  dawgdic/dictionary-builder.h \
  dawgdic/dictionary-extra-unit.h \
  dawgdic/dictionary-unit.h \
  dawgdic/completer.h \
  dawgdic/guide.h \
  dawgdic/guide-builder.h \
  dawgdic/guide-unit.h \
  dawgdic/ranked-completer.h \
  dawgdic/ranked-completer-candidate.h \
  dawgdic/ranked-completer-node.h \
  dawgdic/ranked-guide.h \
  dawgdic/ranked-guide-builder.h \
  dawgdic/ranked-guide-link.h \
  dawgdic/ranked-guide-unit.h
